--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,7 @@
         <title>welcome to vs code</title>
         <meta charset="utf-8"/>
     </head>
-    <body>
+    <body style="background-color: rgb(65, 62, 88);">
         <h2>this is my first vs code<h2>
     </body>
 </html>
